--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
 
 @plugin 'tailwindcss-animate';
 
+@plugin "daisyui";
+
 @source '../views';
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 
